@@ -358,7 +358,7 @@ literal|"0"
 argument_list|,
 literal|"lowerfilt"
 argument_list|,
-literal|"faith hope and love"
+literal|"faith hope and love to"
 argument_list|,
 literal|"teststop"
 argument_list|,
@@ -636,6 +636,263 @@ name|commit
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testCollationWithRangeQuery
+specifier|public
+name|void
+name|testCollationWithRangeQuery
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrCore
+name|core
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+decl_stmt|;
+name|SearchComponent
+name|speller
+init|=
+name|core
+operator|.
+name|getSearchComponent
+argument_list|(
+literal|"spellcheck"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"speller is null and it shouldn't be"
+argument_list|,
+name|speller
+operator|!=
+literal|null
+argument_list|)
+expr_stmt|;
+name|ModifiableSolrParams
+name|params
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellingParams
+operator|.
+name|SPELLCHECK_BUILD
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COUNT
+argument_list|,
+literal|"10"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COLLATE
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellingParams
+operator|.
+name|SPELLCHECK_ALTERNATIVE_TERM_COUNT
+argument_list|,
+literal|"10"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|CommonParams
+operator|.
+name|Q
+argument_list|,
+literal|"id:[1 TO 10] AND lowerfilt:lovw"
+argument_list|)
+expr_stmt|;
+block|{
+name|SolrRequestHandler
+name|handler
+init|=
+name|core
+operator|.
+name|getRequestHandler
+argument_list|(
+literal|"spellCheckCompRH"
+argument_list|)
+decl_stmt|;
+name|SolrQueryResponse
+name|rsp
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|rsp
+operator|.
+name|add
+argument_list|(
+literal|"responseHeader"
+argument_list|,
+operator|new
+name|SimpleOrderedMap
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|SolrQueryRequest
+name|req
+init|=
+operator|new
+name|LocalSolrQueryRequest
+argument_list|(
+name|core
+argument_list|,
+name|params
+argument_list|)
+decl_stmt|;
+name|handler
+operator|.
+name|handleRequest
+argument_list|(
+name|req
+argument_list|,
+name|rsp
+argument_list|)
+expr_stmt|;
+name|req
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|NamedList
+name|values
+init|=
+name|rsp
+operator|.
+name|getValues
+argument_list|()
+decl_stmt|;
+name|NamedList
+name|spellCheck
+init|=
+operator|(
+name|NamedList
+operator|)
+name|values
+operator|.
+name|get
+argument_list|(
+literal|"spellcheck"
+argument_list|)
+decl_stmt|;
+name|NamedList
+name|collationHolder
+init|=
+operator|(
+name|NamedList
+operator|)
+name|spellCheck
+operator|.
+name|get
+argument_list|(
+literal|"collations"
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|collations
+init|=
+name|collationHolder
+operator|.
+name|getAll
+argument_list|(
+literal|"collation"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|collations
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|1
+argument_list|)
+expr_stmt|;
+name|String
+name|collation
+init|=
+name|collations
+operator|.
+name|iterator
+argument_list|()
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|collation
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Incorrect collation: "
+operator|+
+name|collation
+argument_list|,
+literal|"id:[1 TO 10] AND lowerfilt:love"
+operator|.
+name|equals
+argument_list|(
+name|collation
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
